console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  namespace: console
spec:
  replicas: 2
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
      - name: console
        image: nginx
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: console-html
